fix(docs): fixing all documentation
