# src/routes/api.ts
@@ -5,8 +5,8 @@ import authMiddleware from '../middlewares/authMiddleware';
 const router = express.Router();
 
 router.post('/auth/register', authController.register);
-router.post('/auth/login', authController.login);
 router.post('/auth/activation', authController.activation);
+router.post('/auth/login', authController.login);
 router.get('/auth/me',
     authMiddleware,
     authController.me
